--- a/services/autonomous/src/configs/seeker-apex-td3.yaml
+++ b/services/autonomous/src/configs/seeker-apex-td3.yaml
@@ -17,9 +17,9 @@ seeker-apex-td3:
         horizon: 100
 
         # === Model ===
-        actor_hiddens: [400, 300]
-        critic_hiddens: [400, 300]
-        n_step: 4
+        actor_hiddens: [256]
+        critic_hiddens: [256]
+        n_step: 1
         gamma: 0.99
         env_config: {}
         model:
@@ -31,7 +31,6 @@ seeker-apex-td3:
         exploration_should_anneal: True
         schedule_max_timesteps: 1000000 # 1 million
         exploration_ou_noise_scale: 0.2
-        target_network_update_freq: 50000
         tau: 1.0 # 1
 
         # === Replay buffer ===
@@ -49,7 +48,7 @@ seeker-apex-td3:
         critic_lr: 0.0005
         use_huber: True
         huber_threshold: 1.0
-        l2_reg: 0.0000001
+        l2_reg: 0.000001
         learning_starts: 100000
         sample_batch_size: 40
         train_batch_size: 1024
