--- a/services/autonomous/src/configs/seeker-apex-dev.yaml
+++ b/services/autonomous/src/configs/seeker-apex-dev.yaml
@@ -1,8 +1,8 @@
-seeker-test:
+seeker-apex-dev:
     run: APEX_DDPG
-    checkpoint_freq: 50
+    checkpoint_freq: 20
     stop:
-        episode_reward_mean: 1.2
+        episode_reward_mean: 2.0
     config:
         # === Environment ===
         env: MultiRobot-v0
@@ -19,40 +19,40 @@ seeker-test:
         # === Model ===
         n_step: 4
         gamma: 0.99
+        use_state_preprocessor: True
         model:
-            custom_preprocessor: "debug_prep"
-            custom_model: "fusion_model"
-            custom_options: {}
+            use_lstm: False
+            custom_model: "mink"
+
+        # === Evaluation ===
+        evaluation_interval: 5
+        evaluation_num_episodes: 10
 
         # === Exploration ===
-        schedule_max_timesteps: 100 # 100 million
+        schedule_max_timesteps: 2000000
         exploration_fraction: 0.5
-        target_network_update_freq: 5000
-        tau: 0.002 # 1
+        target_network_update_freq: 500000
+        tau: 0.001 # 1
 
         # === Replay buffer ===
-        buffer_size: 48000
-        prioritized_replay: True
-        prioritized_replay_alpha: 0.6
-        prioritized_replay_beta: 0.4
-        prioritized_replay_eps: 0.000001
-        clip_rewards: False
+        buffer_size: 480000
         optimizer:
             num_replay_buffer_shards: 4
 
         # === Optimization ===
-        actor_lr: 0.0005
-        critic_lr: 0.001
+        lr: 0.0001
+        use_huber: True
+        huber_threshold: 1.0
         l2_reg: 0.0000001
-        learning_starts: 10000
+        learning_starts: 1000
         sample_batch_size: 20
-        train_batch_size: 64
+        train_batch_size: 128
         min_iter_time_s: 30
         timesteps_per_iteration: 1000
 
         # === Parallelism ===
         num_gpus: 0
         num_workers: 4
-        num_cpus_per_worker: 2
-        num_envs_per_worker: 2
+        num_cpus_per_worker: 1
+        num_envs_per_worker: 4
         remote_worker_envs: True
